Adicionado main centralizado

--- a/style.css
+++ b/style.css
@@ -4,6 +4,12 @@
 body{
     font-family: 'Fira Sans', sans-serif;
     margin: 0px;
+    background-color: #ccc;
+}
+
+.main {
+    width: 1080px;
+    margin: 0 auto;
 }
 
 .header_top{
