--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body{
 
 .header_top{
     display: flex;
-    background-color: #eefaff;
+    background-color: #aae5ff;
     padding: 20px;
     align-items: center;
     justify-content: space-around;
@@ -31,6 +31,10 @@ body{
     font-size: 40px;
 }
 
+.header_left p{
+    text-align: justify;
+}
+
 .header_right img{
     border-radius: 100%;
     height: 200px;
@@ -39,14 +43,65 @@ body{
 
 .middle{
     display: flex;
-    background-color: #ffe7d8;
-    padding: 20px;
-    justify-content: space-around;
+    background-color: #d5f1fd;
+    padding: 10px;
+    justify-content: space-between;
     color: #002b34;
 }
 
-.experience h1, .education h1, .skills h1{
-    font-size: 40px;
+.work_experience h1, .education h1, .skills h1, .skills2 h1{ 
+    font-size: 30px;
+    padding: 10px;
+    margin: 20px;
+}
+
+.work_experience{
+    margin-left: 20px;
+}
+
+.work_experience h2{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.work_experience h3{
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.work_experience ul{
+    margin-top: 5px;
+    margin-bottom: 50px;
+}
+
+.education ul, .skills ul{
+    margin-top: 0px;
+}
+
+.education_1{
+    font-size: 15px;
+}
+
+.right section{
+    margin-bottom: 100px;
+}
+
+.right{
+    margin-left: 10px;
+}
+
+.skills2 ul{
+    display: flex;
+    list-style: none;
+    gap:50px;
+   
+}
+
+.skills2 ul img{
+    align-items: center;
+    height: 50px;
+    width: 50px;
+
 }
 
 .middle ul li{
@@ -57,12 +112,13 @@ body{
     background-color: #000;
     height: inherit;
     width: 1px;
+    margin-left: 10px;
 
 }
 
 footer{
     display: flex;
-    background-color: #002b34;
+    background-color: #002334;
     padding: 20px;
     justify-content: space-evenly;
     color: #ffe7d8;
